refactor(dependencies): Upgrade to Spring Boot version 3.2.11 and migrate from javax to jakarta packages across the codebase